--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,13 @@
           <url-pattern>/tv</url-pattern> -->
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+
+    <jsp-config>
+        <jsp-property-group>
+            <url-pattern>*.jsp</url-pattern>
+            <trim-directive-whitespaces>true</trim-directive-whitespaces>
+        </jsp-property-group>
+    </jsp-config>
     <!--
     <servlet>
         <servlet-name>HelloWorldServlet</servlet-name>
