--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,22 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
-    </dependencies>
 
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.2.0.RELEASE</version>
+        </dependency>
+
+        <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>4.2.0.RELEASE</version>
+        <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 
     <build>
         <finalName>java2</finalName>
